--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "jquery": "^3.6.4",
-    "jsdom": "^21.1.1"
+    "express": "^4.18.2"
   }
 }
