--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,15 @@
     "version": 2,
     "name": "interactive-rating-component",
     "builds": [
-       { "src": "app.js", "use": "@vercel/node" }
+       {
+         "src": "app.js",
+         "use": "@vercel/node"
+      }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "app.js" }
+       {
+         "src": "/(.*)",
+         "dest": "/"
+      }
     ]
  }
