--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "![Design preview for the Interactive rating component coding challenge](./design/desktop-preview.jpg)",
   "main": "app.js",
+  "type": "module",
   "engines": {
     "node": "18.x"
   },
@@ -12,8 +13,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@astrojs/vercel": "^3.2.4",
-    "astro": "^2.3.0",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
